--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -1,6 +1,78 @@
 // Place all the styles related to the Users controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: https://sass-lang.com/
-* {
-  color: blue;
+
+#sign-up-container {
+  width: 100%;
+  height: 100vh;
+
+  background: #dbc8ff;
+  color: #36117e;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+#sign-up-container .form-container {
+  background: #fff;
+  border: 2px solid #cdb3ff;
+  border-radius: 20px;
+}
+
+// #sign-up-container .form-container main header a {
+//   font-size: 1.5rem;
+//   text-decoration: none;
+//   color: #6918b4;
+// }
+
+#sign-up-container .form-container main header .instructions {
+  margin-top: 5rem;
+}
+
+#sign-up-container .form-container main header .instructions h1 {
+  font-size: 2.8rem;
+  margin-bottom: 1rem;
+}
+
+#sign-up-container .form-container main {
+  padding: 40px;
+}
+
+#sign-up-container .form-container main form {
+  margin-top: 50px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+#sign-up-container .form-container main form .field {
+  width: 250px;
+}
+
+#sign-up-container .form-container main form .field input {
+  border: 1px solid #cdb3ff;
+  border-radius: 20px;
+  padding: 0.8rem 1.5rem;
+  width: 100%;
+}
+
+#sign-up-container .footer {
+  margin-top: 30px;
+  width: 100%;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+#sign-up-container .footer button {
+  color: #dbc8ff;
+  background: #36117e;
+  transition: background-color 0.2s;
+}
+
+#sign-up-container .footer button:hover {
+  background: #4c18b4;
 }
