--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,5 +1,15 @@
-<h1>New User</h1>
-
-<%= render 'form', user: @user %>
-
-<%= link_to 'Back', users_path %>
+<div id="sign-up-container">
+  <div class="form-container">
+    <main>
+      <header>
+        <div class="instructions">
+          <h1>Crie sua conta gratuita</h1>
+          <p>É só preencher os seus dados nos campos a seguir.</p>
+        </div>
+      </header>
+  
+      <%= render 'form', user: @user %>
+      <%= link_to 'Back', root_path %>
+    </main>
+  </div>
+</div>
