--- a/app/views/topics/index.html.erb
+++ b/app/views/topics/index.html.erb
@@ -1,29 +1,49 @@
-<p id="notice"><%= notice %></p>
+<div class="container">
+  <div class="title">
+    <h1>Topics</h1>
+  </div>
 
-<h1>Topics</h1>
+<!--  <table>-->
+<!--    <thead>-->
+<!--    <tr>-->
+<!--      <th>Name</th>-->
+<!--      <th colspan="3"></th>-->
+<!--    </tr>-->
+<!--    </thead>-->
 
-<table>
-  <thead>
-    <tr>
-      <th>Name</th>
-      <th>User</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
+<!--    <tbody>-->
+    <%# @topics.each do |topic| %>
+<!--      <tr>-->
+<!--        <td><%#= topic.name %></td>-->
+<!--        <td><%#= link_to 'Destroy', topic, method: :delete, data: { confirm: 'Are you sure?' } %></td>-->
+<!--      </tr>-->
+    <%# end %>
+<!--    </tbody>-->
+<!--  </table>-->
 
-  <tbody>
+  <div class="topic-cards">
     <% @topics.each do |topic| %>
-      <tr>
-        <td><%= topic.name %></td>
-        <td><%= topic.user_id %></td>
-        <td><%= link_to 'Show', topic %></td>
-        <td><%= link_to 'Edit', edit_topic_path(topic) %></td>
-        <td><%= link_to 'Destroy', topic, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
+      <div class="topic-item">
+        <h2 class="topic-title"><%= topic.name %></h2>
+
+        <div class="btn btn-primary"><%= link_to 'Notes', documents_path(:topic_id => topic.id) %></div>
+        <div class="btn btn-outline-danger"><%= link_to 'X', topic, method: :delete, data: { confirm: 'Are you sure?' } %></div>
+      </div>
     <% end %>
-  </tbody>
-</table>
+  </div>
+  <p id="notice"><%= notice %></p>
+  <br>
 
-<br>
+  <%= form_tag '/topics' do%>
+    <div class="new-name-tag">
+      <div class="field">
+        New Topic: <%= text_field_tag :name %>
+      </div>
+      <div class="btn btn-primary">
+        <%= submit_tag "+" %>
+      </div>
+    </div>
+  <% end %>
 
-<%= link_to 'New Topic', new_topic_path %>
+</div>
+
