--- a/app/views/documents/edit.html.erb
+++ b/app/views/documents/edit.html.erb
@@ -3,4 +3,4 @@
 <%= render 'form', document: @document %>
 
 <%= link_to 'Show', @document %> |
-<%= link_to 'Back', documents_path %>
+<%= link_to 'Back', documents_path(:topic_id => @document.topic_id) %>
