--- a/app/views/documents/show.html.erb
+++ b/app/views/documents/show.html.erb
@@ -16,4 +16,4 @@
 </p>
 
 <%= link_to 'Edit', edit_document_path(@document) %> |
-<%= link_to 'Back', documents_path %>
+<%= link_to 'Back', documents_path(:topic_id => @document.topic_id) %>
