--- a/app/assets/stylesheets/documents.scss
+++ b/app/assets/stylesheets/documents.scss
@@ -1,3 +1,35 @@
 // Place all the styles related to the Documents controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: https://sass-lang.com/
+
+.document-title {
+    margin-bottom: 50px;
+}
+
+.document-cards {
+    display: flex;
+    width: 100%;
+    justify-content: space-between;
+    flex-flow: row wrap;
+}
+
+.document-item {
+    border: 1px solid #cdb3ff;
+    width: 600px;
+    border-radius: 15px;
+    margin: 25px 0;
+    padding: 10px;
+    box-shadow: 0 0 9px rgba(0, 0, 0, 0.3);
+    transition: all 0.2s;
+    background-color: #eee;
+
+    &:hover {
+        background: #ad8bfa;
+        transform: translateY(-5px);
+    }
+}
+
+.document-card-form {
+    display: flex;
+    justify-content: center;
+  }
